examples/test/testpolicy4436.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4436
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key47: value7
      key41: value24
      key8: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value30
          key29: value3
      podSelector:
        matchLabels:
          key4: value11
          key39: value15
